--- a/UI/Helper/Content/css/links.css
+++ b/UI/Helper/Content/css/links.css
@@ -14,7 +14,7 @@
 	background-color: rgba(255,250,240,0.5);
 	background-repeat: no-repeat;
 	background-position: 2px 1px;
-	padding: 1px 5px 1px 20px;
+	padding: 1px 5px 1px 21px;
 	}
 
 .link-map,
@@ -37,7 +37,8 @@
 	background-image: url(http://img.int1a.net/famfamfam/silk/information.png);
 	}
 .link-gallery {
-	background-image: url(http://img.int1a.net/famfamfam/silk/image.png);
+	background-image: url(http://img.int1a.net/famfamfam/silk/folder_image.png);
+	padding-left: 22px;
 	}
 .link-tag {
 	background-image: url(http://img.int1a.net/famfamfam/silk/tag_blue.png);
