--- a/Work/Missions/css/site.mission.css
+++ b/Work/Missions/css/site.mission.css
@@ -1,3 +1,4 @@
+
 tr.row-priority.priority-1 {
 	background-color: rgba(255,0,0,0.20);
 	}
@@ -13,6 +14,13 @@ tr.row-priority.priority-4 {
 tr.row-priority.priority-5 {
 	background-color: rgba(0,255,0,0.20);
 	}
+
+#mission-folders {
+	}
+#mission-folders td {
+	padding: 2px 2px;
+	}
+
 
 #mission-folders1 {
 	border: 1px solid #BFBFBF;
@@ -59,13 +67,14 @@ tr.row-priority.priority-5 {
 */	
 	}
 #mission-folders div.overdue {
-	float: left;
+	float: right;
 	display: block;
-	margin: 1px 1em 1px 0em;
-	padding: 0px 6px 0px 5px;
-	background-color: red;
-	border-radius: 10px;
-	color: rgba(255,255,255,0.8);
+	margin: 1px 4px 1px 6px;
+	padding: 0px 6px 0px 6px;
+	background-color: rgba(255,0,0,0.85);
+	border-radius: 12px;
+	color: rgba(255,255,255,0.85);
+	font-size: 0.9em;
 	font-weight: bold;
 /*	margin: 2px 1em 1px 0em;
 	padding: 0px 7px 0px 6px;
@@ -165,4 +174,16 @@ body.jobWorkMission.job-work-mission-mail-daily div.text-signature {
 	font-style: italic;
 	font-weight: lighter;
 	font-size: 1.0em;
+	}
+
+.icon-label {
+	background-repeat: no-repeat;
+	background-position: 0px 1px;
+	padding-left: 20px;
+	}
+.icon-label.mission-type-0 {
+	background-image: url(http://img.int1a.net/famfamfam/silk/script.png);
+	}
+.icon-label.mission-type-1 {
+	background-image: url(http://img.int1a.net/famfamfam/silk/date.png);
 	}
